Fixing Large Files Upload

--- a/V3VServer/coreserver/templates/coreserver/v3v_demo.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo.html
@@ -37,9 +37,9 @@ $(document).ready( function() {
      <h5>3- A downloadable link for the result will be sent to your email after conversion<h5>
   </div>
   <div class="panel with-nav-tabs panel-default">
-	<div class="panel-heading">
+	<div class="panel-heading" style="background:LightYellow  !important">
 	    <ul class="nav nav-tabs">
-	   	<li class="active"><a href="#tab1default" data-toggle="tab">Upload/Download</a></li>
+	   	<li class="active"><a href="#tab1default" data-toggle="tab">Upload</a></Dli>
 	    </ul>
 	</div>
         <div class="panel-body">
