html GUI changes

--- a/V3VServer/coreserver/templates/coreserver/v3v_demo.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo.html
@@ -25,19 +25,22 @@ $(document).ready( function() {
 <body>
 
 <div class="page-header">
+<center>
   <h2> &nbsp;&nbsp; Online Demo for <a href="http://ds.qcri.org/index.php/cloud-based-multimedia-content-distribution-and-protection-platform/21-sub-project/55-dgc">2D-3D Conversion</a></h2>
   <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This demo converts uploaded 2D sports videos to 3D videos. More info about this project can be found <a href="http://ds.qcri.org/index.php/cloud-based-multimedia-content-distribution-and-protection-platform/21-sub-project/55-dgc">here</a></p>
+</center>
 </div>
 <div class="container">
   
-  <div style="background:LightYellow  !important" class="jumbotron"> 
-     <b><p>Steps to convert 2D videos:</p></b>
-     <h5>1- Choose a file to convert (recommended duration less than 5 minutes and in HD quality)<h5>
-     <h5>2- After choosing the video, enter your email address, then click the "Submit" button<h5>
-     <h5>3- A downloadable link for the result will be sent to your email after conversion<h5>
+  <div style="background:#FFFFCC  !important" class="jumbotron"> 
+     <b><u><h3>Steps to convert 2D videos:</h3></b></u>
+     <h4><h4>
+     <h4>1- Choose a file to convert (recommended duration less than 5 minutes and in HD quality)<h4>
+     <h4>2- After choosing the video, enter your email address, then click the "Submit" button<h4>
+     <h4>3- A downloadable link for the result will be sent to your email after conversion<h4>
   </div>
   <div class="panel with-nav-tabs panel-default">
-	<div class="panel-heading" style="background:LightYellow  !important">
+	<div class="panel-heading" style="background:#FFFFCC  !important">
 	    <ul class="nav nav-tabs">
 	   	<li class="active"><a href="#tab1default" data-toggle="tab">Upload</a></Dli>
 	    </ul>
