--- a/V3VServer/coreserver/templates/coreserver/v3v_demo.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo.html
@@ -35,9 +35,9 @@ $(document).ready( function() {
   <div style="background:#FFFFCC  !important" class="jumbotron"> 
      <b><u><h3>Steps to convert 2D videos:</h3></b></u>
      <h4><h4>
-     <h4>1- Choose a file to convert (recommended duration less than 5 minutes and in HD quality)<h4>
-     <h4>2- After choosing the video, enter your email address, then click the "Submit" button<h4>
-     <h4>3- A downloadable link for the result will be sent to your email after conversion<h4>
+     <h4>1- Choose a file to convert (video should be less than 100 MB, HD quality, and non-interlaced).<h4>
+     <h4>2- Enter your email address, then click the "Submit" button.<h4>
+     <h4>3- The URL of the converted 3D video will be emailed to you (after approximately 10-20X the length of the video).<h4>
   </div>
   <div class="panel with-nav-tabs panel-default">
 	<div class="panel-heading" style="background:#FFFFCC  !important">
