--- a/V3VServer/coreserver/templates/coreserver/v3v_demo.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo.html
@@ -25,6 +25,9 @@ $(document).ready( function() {
 <body>
 
 <div class="page-header">
+<div style="float: left"><img src="QCRI.jpg" alt="Qatar Computing Research Institute" style="width:200px;"></div>
+<div style="float: right"><img src="CSAIL.jpg" alt="MIT Computer Science and Artificial Intelligence Laboratory" style="width:200px;"></div>
+</br></br></br>
 <center>
   <h2> &nbsp;&nbsp; Online Demo for <a href="http://ds.qcri.org/index.php/cloud-based-multimedia-content-distribution-and-protection-platform/21-sub-project/55-dgc">2D-3D Conversion</a></h2>
   <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This demo converts uploaded 2D sports videos to 3D videos. More info about this project can be found <a href="http://ds.qcri.org/index.php/cloud-based-multimedia-content-distribution-and-protection-platform/21-sub-project/55-dgc">here</a></p>
