--- a/V3VServer/coreserver/templates/coreserver/v3v_demo.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo.html
@@ -34,6 +34,15 @@ $(document).ready( function() {
   <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This demo converts uploaded 2D sports videos to 3D videos. More info about this project can be found <a href="http://ds.qcri.org/index.php/cloud-based-multimedia-content-distribution-and-protection-platform/21-sub-project/55-dgc">here</a></p>
 </center>
 </div>
+{% block message %}
+{% if has_statistics %}
+	<div class="page-header">
+		<center>
+			<h4>{{videos}} videos are converted so far by different {{users}} users!    more statistics...</h4> 
+		</center>
+	</div>
+{% endif %}
+{% endblock %}
 <div class="container">
   
   <div style="background:#FFFFCC  !important" class="jumbotron"> 
