--- a/V3VServer/coreserver/templates/coreserver/v3v_demo.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo.html
@@ -91,7 +91,7 @@ $(document).ready( function() {
 	{% if finished %}
    <div style="background:LightYellow  !important"> 
      <b> <h5>{{notification}}</h5> </b>
-     <h4>{{videos}} videos are converted so far by different {{users}} users!    more statistics...</h4>
+     <h4>videos are converted so far by different users!    more statistics...</h4>
   </div>
 	{% endif %}  
   {% endblock %}
