--- a/V3VServer/coreserver/templates/coreserver/hazem.html
+++ b/V3VServer/coreserver/templates/coreserver/hazem.html
@@ -36,7 +36,7 @@ $(document).ready( function() {
 </div>
 
 <div style="background:LightYellow  !important"> 
-     <h4>videos are converted so far by different users!    more statistics...</h4>
+     <h4>videoss are converted so far by different users!    more statistics...</h4>
 </div>
 
 <div class="container">
