--- a/V3VServer/coreserver/templates/coreserver/hazem.html
+++ b/V3VServer/coreserver/templates/coreserver/hazem.html
@@ -38,7 +38,7 @@ $(document).ready( function() {
 <div style="background:LightYellow  !important"> 
      <h4>videoss are converted so far by different users!    more statistics...</h4>
 </div>
-{% block message %}
+{% block statistics %}
 	
 	<div style="background:LightYellow  !important"> 
     	 <h4>{{videos}} videoss are converted so far by different users!    more statistics...</h4>
