refine statistics bar

--- a/V3VServer/coreserver/templates/coreserver/hazem.html
+++ b/V3VServer/coreserver/templates/coreserver/hazem.html
@@ -37,9 +37,9 @@ $(document).ready( function() {
 
 {% block statistics %}
 	{% if has_statistics %}
-		<div style="background:LightYellow  !important">
+		<div style="background:#E0E0E0">
 			<center>
-	    	 	<h4>{{videos}} videoss are converted so far by {{users}} different users!    more statistics...</h4>
+	    	 	<h4>{{videos}} videos are converted so far by {{users}} different users! -- more statistics...</h4>
 	    	</center>
 		</div>
 	{% endif %}  
