--- a/V3VServer/coreserver/templates/coreserver/v3v_demo_home.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo_home.html
@@ -91,7 +91,7 @@ $(document).ready( function() {
 	{% if has_statistics %}
 		<div style="background:#E0E0E0">
 			<center>
-	    	 	<h4><red>{{videos}}</red> videos are converted so far by <red>{{users}}</red> different users! -- more statistics...</h4>
+	    	 	<h4>{{videos}} videos are converted so far using our serveice -- <a href="{% url coreserver:get_statistics %}">get more statistics...</a></h4>
 	    	</center>
 		</div>
 	{% endif %}  
