--- a/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
@@ -1,1 +1,111 @@
-under construction
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>V3V Statistics</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<!-- <link href="/static/css/app.css" rel="stylesheet"> -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="http://www.amcharts.com/lib/3/amcharts.js" type="text/javascript"></script>
+	<script src="http://www.amcharts.com/lib/3/serial.js" type="text/javascript"></script>
+	
+	
+	<script type="text/javascript">
+	// loading charts
+	AmCharts.makeChart("chartdiv",
+				{
+					"type": "serial",
+					"categoryField": "category",
+					"startDuration": 1,
+					"categoryAxis": {
+						"gridPosition": "start"
+					},
+					"trendLines": [],
+					"graphs": [
+						{
+							"balloonText": "[[title]] of [[category]]:[[value]]",
+							"bullet": "round",
+							"id": "AmGraph-1",
+							"title": "graph 1",
+							"valueField": "column-1"
+						},
+						{
+							"balloonText": "[[title]] of [[category]]:[[value]]",
+							"bullet": "square",
+							"id": "AmGraph-2",
+							"title": "graph 2",
+							"valueField": "column-2"
+						}
+					],
+					"guides": [],
+					"valueAxes": [
+						{
+							"id": "ValueAxis-1",
+							"title": "Axis title"
+						}
+					],
+					"allLabels": [],
+					"balloon": {},
+					"legend": {
+						"enabled": true,
+						"useGraphSettings": true
+					},
+					"titles": [
+						{
+							"id": "Title-1",
+							"size": 15,
+							"text": "Chart Title"
+						}
+					],
+					"dataProvider": [
+						{
+							"category": "category 1",
+							"column-1": 8,
+							"column-2": 5
+						},
+						{
+							"category": "category 2",
+							"column-1": 6,
+							"column-2": 7
+						}
+					]
+				}
+			);
+	</script>
+</head>
+<body>
+
+<div class="page-header">
+{% load staticfiles %}
+<div style="float: left"><img src="{% static "coreserver/QCRI.jpg" %}" alt="Qatar Computing Research Institute" style="width:200px;"></div>
+<div style="float: right"><img src="{% static "coreserver/CSAIL.jpg" %}" alt="MIT Computer Science and Artificial Intelligence Laboratory" style="width:200px;"></div>
+</br></br></br>
+<center>
+  <h2> &nbsp;&nbsp; Online Demo for <a href="http://ds.qcri.org/index.php/cloud-based-multimedia-content-distribution-and-protection-platform/21-sub-project/55-dgc">2D-3D Conversion</a></h2>
+  <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This demo converts uploaded 2D sports videos to 3D videos. More info about this project can be found <a href="http://ds.qcri.org/index.php/cloud-based-multimedia-content-distribution-and-protection-platform/21-sub-project/55-dgc">here</a></p>
+</center>
+</div>
+
+<div class="container">
+  <div class="panel with-nav-tabs panel-default">
+	<div class="panel-heading" style="background:#FFFFCC  !important">
+	    <ul class="nav nav-tabs">
+	   	<li class="active"><a href="#tab1default" data-toggle="tab">Number of uploaded videos per month</a></Dli>
+	    </ul>
+	</div>
+    <div class="panel-body">
+    	<div class="tab-content">
+        	<div class="tab-pane fade in active" id="tab1default">
+   				<div id="videosperdate" style="width: 100%; height: 400px; background-color: #FFFFFF;" ></div>
+	        </div>
+	 
+	   	</div>
+	</div> 
+
+  </div>
+ 
+</div>
+</body>
+</html>
