--- a/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
@@ -10,7 +10,7 @@
   	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script src="http://www.amcharts.com/lib/3/amcharts.js" type="text/javascript"></script>
 	<script src="http://www.amcharts.com/lib/3/serial.js" type="text/javascript"></script>
-	<script src="amcharts/plugins/dataloader/dataloader.min.js" type="text/javascript"></script>
+	<script src="http://www.amcharts.com/lib/3/plugins/dataloader/dataloader.min.js" type="text/javascript"></script>
 	
 	<script type="text/javascript">
 	// loading charts
