--- a/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
@@ -1,145 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>V3V Statistics</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<!-- <link href="/static/css/app.css" rel="stylesheet"> -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	<script src="http://www.amcharts.com/lib/3/amcharts.js" type="text/javascript"></script>
-	<script src="http://www.amcharts.com/lib/3/serial.js" type="text/javascript"></script>
-	<script src="http://www.amcharts.com/lib/3/plugins/dataloader/dataloader.min.js" type="text/javascript"></script>
-	
-	<script type="text/javascript">
-	// loading charts
-	AmCharts.makeChart("videosperday",
-				{
-					"type": "serial",
-					"categoryField": "day",
-					"startDuration": 1,
-					"categoryAxis": {
-						"gridPosition": "start"
-					},
-					"dataLoader": {
-					    "url": "get_videos_per_day",
-					    "format": "json"
-					 },
-					"pathToImages": "http://www.amcharts.com/lib/images/",
-					"graphs": [
-						{
-							"balloonText": "[[title]] of [[category]]:[[value]]",
-							"bullet": "round",
-							"id": "AmGraph-1",
-							"title": "videos per day",
-							"valueField": "count"
-						}
-					],
-					"valueAxes": [
-						{
-							"id": "ValueAxis-1",
-							"title": "Axis title"
-						}
-					],
-					"legend": {
-						"enabled": true,
-						"useGraphSettings": true
-					}
-				}
-			);
-	AmCharts.makeChart("usersperday",
-			{
-				"type": "serial",
-				"categoryField": "category",
-				"startDuration": 1,
-				"categoryAxis": {
-					"gridPosition": "start"
-				},
-				"graphs": [
-					{
-						"balloonText": "[[title]] of [[category]]:[[value]]",
-						"bullet": "round",
-						"id": "AmGraph-1",
-						"title": "graph 1",
-						"valueField": "column-1"
-					}
-				],
-				"valueAxes": [
-					{
-						"id": "ValueAxis-1",
-						"title": "users per date"
-					}
-				],
-				"legend": {
-					"enabled": true,
-					"useGraphSettings": true
-				},
-				"dataProvider": [
-					{
-						"category": "category 1",
-						"column-1": 8,
-					},
-					{
-						"category": "category 2",
-						"column-1": 6,
-					}
-				]
-			}
-		);
-	</script>
+<title>V3V Statistics</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet"
+	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<!-- <link href="/static/css/app.css" rel="stylesheet"> -->
+<script
+	src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script
+	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="http://www.amcharts.com/lib/3/amcharts.js"
+	type="text/javascript"></script>
+<script src="http://www.amcharts.com/lib/3/serial.js"
+	type="text/javascript"></script>
+<script
+	src="http://www.amcharts.com/lib/3/plugins/dataloader/dataloader.min.js"
+	type="text/javascript"></script>
+<script src="static/js/statistics_charts.js" type="text/javascript"></script>
 </head>
 <body>
 
-<div class="page-header">
-{% load staticfiles %}
-<div style="float: left"><img src="{% static "coreserver/QCRI.jpg" %}" alt="Qatar Computing Research Institute" style="width:200px;"></div>
-<div style="float: right"><img src="{% static "coreserver/CSAIL.jpg" %}" alt="MIT Computer Science and Artificial Intelligence Laboratory" style="width:200px;"></div>
-</br></br></br>
-<center>
-  <h2> &nbsp;&nbsp; Online Demo for <a href="http://ds.qcri.org/index.php/cloud-based-multimedia-content-distribution-and-protection-platform/21-sub-project/55-dgc">2D-3D Conversion</a></h2>
-  <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This demo converts uploaded 2D sports videos to 3D videos. More info about this project can be found <a href="http://ds.qcri.org/index.php/cloud-based-multimedia-content-distribution-and-protection-platform/21-sub-project/55-dgc">here</a></p>
-</center>
-</div>
-
-<div class="container">
-  <div class="panel with-nav-tabs panel-default">
-	<div class="panel-heading" style="background:#FFFFCC  !important">
-	    <ul class="nav nav-tabs">
-	   	<li class="active"><a href="#tab1default" data-toggle="tab">Number of uploaded videos per day</a></Dli>
-	    </ul>
+	<div class="page-header">
+		{% load staticfiles %}
+		<div style="float: left">
+			<img src="{% static "
+				coreserver/QCRI.jpg" %}" alt="Qatar Computing Research Institute"
+				style="width: 200px;">
+		</div>
+		<div style="float: right">
+			<img src="{% static "
+				coreserver/CSAIL.jpg" %}" alt="MIT Computer Science and Artificial Intelligence Laboratory"
+				style="width: 200px;">
+		</div>
+		</br> </br> </br>
+		<center>
+			<h2>
+				&nbsp;&nbsp; Online Demo for <a
+					href="http://ds.qcri.org/index.php/cloud-based-multimedia-content-distribution-and-protection-platform/21-sub-project/55-dgc">2D-3D
+					Conversion</a>
+			</h2>
+			<p>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; This demo converts
+				uploaded 2D sports videos to 3D videos. More info about this project
+				can be found <a
+					href="http://ds.qcri.org/index.php/cloud-based-multimedia-content-distribution-and-protection-platform/21-sub-project/55-dgc">here</a>
+			</p>
+		</center>
 	</div>
-    <div class="panel-body">
-    	<div class="tab-content">
-        	<div class="tab-pane fade in active" id="tab1default">
-   				<div id="videosperday" style="width: 100%; height: 400px; background-color: #FFFFFF;" ></div>
-	        </div>
-	 
-	   	</div>
-	</div> 
 
-  </div>
-</div>
+	<div class="container">
+		<div class="panel with-nav-tabs panel-default">
+			<div class="panel-heading" style="background: #FFFFCC !important">
+				<ul class="nav nav-tabs">
+					<li class="active"><a href="#tab1default" data-toggle="tab">Number
+							of uploaded videos per day</a> </Dli>
+				</ul>
+			</div>
+			<div class="panel-body">
+				<div class="tab-content">
+					<div class="tab-pane fade in active" id="tab1default">
+						<div id="videosperday"
+							style="width: 100%; height: 400px; background-color: #FFFFFF;"></div>
+					</div>
 
+				</div>
+			</div>
 
-<div class="container">
-  <div class="panel with-nav-tabs panel-default">
-	<div class="panel-heading" style="background:#FFFFCC  !important">
-	    <ul class="nav nav-tabs">
-	   	<li class="active"><a href="#tab1default" data-toggle="tab">Number of distinct users per month</a></Dli>
-	    </ul>
+		</div>
 	</div>
-    <div class="panel-body">
-    	<div class="tab-content">
-        	<div class="tab-pane fade in active" id="tab1default">
-   				<div id="usersperday" style="width: 100%; height: 400px; background-color: #FFFFFF;" ></div>
-	        </div>
-	 
-	   	</div>
-	</div> 
 
-  </div>
-</div>
+
+	<div class="container">
+		<div class="panel with-nav-tabs panel-default">
+			<div class="panel-heading" style="background: #FFFFCC !important">
+				<ul class="nav nav-tabs">
+					<li class="active"><a href="#tab1default" data-toggle="tab">Number
+							of distinct users per month</a> </Dli>
+				</ul>
+			</div>
+			<div class="panel-body">
+				<div class="tab-content">
+					<div class="tab-pane fade in active" id="tab1default">
+						<div id="usersperday"
+							style="width: 100%; height: 400px; background-color: #FFFFFF;"></div>
+					</div>
+
+				</div>
+			</div>
+
+		</div>
+	</div>
 
 </body>
 </html>
