--- a/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
@@ -24,16 +24,8 @@
 
 	<div class="page-header">
 		{% load staticfiles %}
-		<div style="float: left">
-			<img src="{% static "
-				coreserver/QCRI.jpg" %}" alt="Qatar Computing Research Institute"
-				style="width: 200px;">
-		</div>
-		<div style="float: right">
-			<img src="{% static "
-				coreserver/CSAIL.jpg" %}" alt="MIT Computer Science and Artificial Intelligence Laboratory"
-				style="width: 200px;">
-		</div>
+		<div style="float: left"><img src="{% static "coreserver/QCRI.jpg" %}" alt="Qatar Computing Research Institute" style="width:200px;"></div>
+		<div style="float: right"><img src="{% static "coreserver/CSAIL.jpg" %}" alt="MIT Computer Science and Artificial Intelligence Laboratory" style="width:200px;"></div>
 		</br> </br> </br>
 		<center>
 			<h2>
