remove user statistics per day

--- a/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
@@ -92,8 +92,8 @@ var jsonData = {
 	};
 jsonData["dataLoader"] = { "url": "get_videos_per_day", "format": "json"}; 
 var videosPerDayChart = AmCharts.makeChart("videosperday", jsonData);
-jsonData["dataLoader"] = { "url": "get_users_per_day", "format": "json"};
-var usersPerDayChart = AmCharts.makeChart("usersperday", jsonData);
+//jsonData["dataLoader"] = { "url": "get_users_per_day", "format": "json"};
+//var usersPerDayChart = AmCharts.makeChart("usersperday", jsonData);
 //usersPerDayChart.addListener("rendered", zoomChart);
 //zoomChart(usersPerDayChart);
 //videosPerDayChart.addListener("rendered", zoomChart);
