add count distnict users per day

--- a/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
@@ -155,7 +155,7 @@ var videosPerDayChart = AmCharts.makeChart("videosperday", videosPerDayChartJson
 			<div class="panel-heading" style="background: #FFFFCC !important">
 				<ul class="nav nav-tabs">
 					<li class="active"><a href="#tab1default" data-toggle="tab">Number
-							of distinct users per month</a> </Dli>
+							of distinct users per day</a> </Dli>
 				</ul>
 			</div>
 			<div class="panel-body">
