fix duration statistcs

--- a/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
@@ -83,7 +83,7 @@ function jsonDataFactory(url, categoryField){
 			},
 			"categoryField" : categoryField,
 			"categoryAxis" : {
-				"parseDates" : true,
+				"parseDates" : false,
 				"dashLength" : 1,
 				"minorGridEnabled" : true
 			},
