--- a/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
@@ -39,7 +39,7 @@ function jsonDataFactory(url, categoryField, parseDates, valueBarTitle){
 		    	"fillAlphas": 0.9,
 		    	"lineAlpha": 0.2,
 		    	"type": "column",
-		    	"valueField": "visits"
+		    	"valueField": "count"
 		  	}],
 			"chartScrollbar" : {
 				"graph" : "g1",
