fix value bar title

--- a/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo_statistics.html
@@ -108,7 +108,7 @@ var chartHTML = "<div class=\"container\">\
 </div>"
 
 var chartList = [
-	{'id':'videosperday','url':'get_videos_per_day', 'title':'videos converted', 'categoryField':'day', 'parseDates':true, 'valueBarTitle':'number of videos converted'},
+	{'id':'videosperday','url':'get_videos_per_day', 'title':'videos converted', 'categoryField':'day', 'parseDates':true, 'valueBarTitle':'number of converted videos'},
 	{'id':'usersperday','url':'get_users_per_day', 'title':'Number of distinct users', 'categoryField':'day', 'parseDates':true, 'valueBarTitle':'number of distinct users'},
 	// {'id':'durationcount','url':'get_video_duration_count', 'title':'Duration of videos converted', 'categoryField':'duration', 'parseDates':false},
 ]
