--- a/V3VServer/coreserver/templates/coreserver/v3v_demo_home.html
+++ b/V3VServer/coreserver/templates/coreserver/v3v_demo_home.html
@@ -91,7 +91,7 @@ $(document).ready( function() {
 	{% if has_statistics %}
 		<div style="background:#E0E0E0">
 			<center>
-	    	 	<h5>{{videos}} videos have been converted so far using our serveice -- <a href="statistics">more statistics...</a></h5>
+	    	 	<h5>{{videos}} videos have been converted so far using our service -- <a href="statistics">more statistics...</a></h5>
 	    	</center>
 		</div>
 	{% endif %}  
